After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655995 - FTBFS -Werror=unused-but-set-variable in submarine.c
FTBFS -Werror=unused-but-set-variable in submarine.c
Status: RESOLVED FIXED
Product: gcompris
Classification: Other
Component: general
unspecified
Other Linux
: Normal major
: ---
Assigned To: Bruno Coudoin
Rami Aubourg-Kaires
Depends on:
Blocks:
 
 
Reported: 2011-08-04 19:08 UTC by Jeremy Bicha
Modified: 2011-08-13 22:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
buildlog (214.87 KB, application/octet-stream)
2011-08-04 19:08 UTC, Jeremy Bicha
Details

Description Jeremy Bicha 2011-08-04 19:08:28 UTC
Created attachment 193273 [details]
buildlog

gcompris 9.6.1 fails to build from source on my Ubuntu development computer. gcompris builds with -Werror so all warnings are treated as errors as far as I understand it. Here's the relevant part of the attached buildlog:

  CC     submarine.lo
submarine.c: In function 'submarine_create_item':
submarine.c:469:13: error: variable 'h' set but not used [-Werror=unused-but-set-variable]
submarine.c:469:10: error: variable 'w' set but not used [-Werror=unused-but-set-variable]
cc1: all warnings being treated as errors
Comment 1 Jeremy Bicha 2011-08-04 19:16:28 UTC
I believe unused-but-set-variable didn't use to appear in older releases, but it does now so this is preventing a newer version of gcompris from getting into Ubuntu 11.10.
Comment 2 Jeremy Bicha 2011-08-04 19:18:12 UTC
*older releases of gcc
Comment 3 Bruno Coudoin 2011-08-13 22:08:22 UTC
Fixed in head commit e6453013fc33eeb3fe1c75b3db52ea0fc756357c
http://git.gnome.org/browse/gcompris/commit/?id=e6453013fc33eeb3fe1c75b3db52ea0fc756357c

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.