submarine: fixed comilation issue with newer GCC. Fixed bug https://bugzilla.gnome.org/show_bug.cgi?id=655995